--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -4,6 +4,7 @@
         <ul class="navbar-links">
             <li><a href="/">Início</a></li>
             <li><a href="/cadastro">Criar Post</a></li>
+            <li><a href="/contato">Contato</a></li>
         </ul>
     </div>
 </nav>
