--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
 </head>
 <body>
-    {{>navbar}} 
-    {{{body}}} <!-- Aqui será inserido o conteúdo da página 'add.handlebars' -->
+    {{> navbar}}
+    {{{body}}} <!-- Aqui será inserido o conteúdo específico da página -->
     <script type="text/javaScript" src="/js/script.js"></script>
 </body>
 </html>
