--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,2 +1,4 @@
-<h1>Sobre</h1>
-<p>"Bem-vindo ao seu blog prático e dinâmico! Aqui você pode organizar suas ideias de forma simples e eficiente. Adicione novos posts, atualize informações importantes ou remova o que não é mais relevante. Tudo com poucos cliques, criado para tornar sua experiência ainda mais ágil!</p>
+<div class="sobre">
+    <h1>Sobre</h1>
+    <p>Bem-vindo ao seu blog prático e dinâmico! Aqui você pode organizar suas ideias de forma simples e eficiente. Adicione novos posts, atualize informações importantes ou remova o que não é mais relevante. Tudo com poucos cliques, criado para tornar sua experiência ainda mais ágil!</p>
+</div>
