--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -10,7 +10,7 @@
                 <label for="exampleInputPassword1">Conteúdo</label>
                 <input name="conteudo" type="text" class="form-control" id="exampleInputPassword1" placeholder="Digite o conteúdo">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
     </div>
 </div>
