--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,7 +1,7 @@
-<nav>
+<nav class="nav">
     <ul class="navbar">
         <li><a href="/">Home</a></li>
-        <li><a href="/about">Sobre</a></li>
         <li><a href="/posts">Posts</a></li>
+        <li><a href="/about">Sobre</a></li>
     </ul>
 </nav>
