--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,8 +1,7 @@
-<nav>
-    <ul style="list-style: none; display: flex; gap: 15px; background-color: #f8f8f8; padding: 10px; margin: 0;">
-        <li><a href="/" style="text-decoration: none; color: #333;">Home</a></li>
-        <li><a href="/cadastro" style="text-decoration: none; color: #333;">Criar Post</a></li>
-        <li><a href="/deletar" style="text-decoration: none; color: #333;">Deletar Post</a></li>
-        <li><a href="/edit" style="text-decoration: none; color: #333;">Editar Post</a></li>
+<nav class="nav">
+    <ul class="navbar">
+        <li><a href="/">Home</a></li>
+        <li><a href="/posts">Posts</a></li>
+        <li><a href="/about">Sobre</a></li>
     </ul>
 </nav>
